Added scripts to compute the worst error for a static target given its position with regards to the base. Moved errorcomputation part to the standalone function and adjusted original scripts accordingly.

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -190,6 +190,8 @@ As for the detection and tracking of the distant aerial targets, one of the most
 %-------------------------------------------------------------------------
 \section{Optical Localisation Systems}
 
+The system presented in \cite{A_3D_visual_localization} then relies on four ordinary RGB cameras with known parameters (intrinsics, extrinsics) to estimate the position of the easy to detect and static object using the Perpendicular Foot Method algorithm. 
+
 
 %=========================================================================
 %=========================================================================
